fix: correct method call to retrieve main thread ID in BottleneckAnalyzer